Fix crash when clicking home launcher shelf item.

Bug: 891579
Change-Id: I0151617076021d7ed0923853302faa733782b662
Reviewed-on: https://chromium-review.googlesource.com/c/1258610
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596354}
Former-commit-id: e7bae45aec81f3a5af713f5aaea319e1ed327de5